<resources>
    <string name="app_name">Personas</string>
    <string name="profile">Perfil</string>
    <string name="change_user">Cambiar usuario</string>
    <string name="register_user">Registrar otro usuario</string>
    <string name="users">Usuarios</string>
    <string name="user">Usuario</string>
    <string name="grades">Notas</string>
    <string name="add_student">Añadir estudiante</string>
    <string name="add_successful">Se añadio exitosamente</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="add">Añadir</string>
    <string name="insert_user_carnet">Ingrese carnet</string>
    <string name="insert_user_password">Ingrese contraseña</string>
    <string name="insert_user_name">Ingrese usuario</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="fill_fields">Llene los campos</string>
    <string name="data_wrong">Ingrese datos correcto</string>
    <string name="register">Registrarse</string>
    <string name="successful_insert">Ingresado correctamente</string>
    <string name="add_note">Añade una nota</string>

    <string name="notes">Notas</string>
    <string name="note">Nota</string>

    <string name="category">Categoria</string>
    <string name="categories">Categorias</string>

    <string name="new_category">Nueva categoria</string>
    <string name="insert_category">Inserte categoria</string>
    <string name="category_already_exist">Ya existe categoria</string>
    <string name="add_the_note">Agregar nota</string>
    <string name="back">Regresar</string>
    <string name="no_categories">Cree nueva categoria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
