<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rdr.rodrigocorvera.personas.RegistroAlumno">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="100dp"

        />
    <EditText
        android:id="@+id/campo_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_user_name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:maxLength="10"
        />
    <EditText
        android:id="@+id/campo_carnet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_user_carnet"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:maxLength="8"
        android:digits="0123456789"
        />
    <EditText
        android:id="@+id/campo_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_user_password"
        android:textSize="20sp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:maxLength="8"
        />

    <Button
        android:id="@+id/boton_iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        />

</LinearLayout>
