<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_category"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/new_category_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/insert_category"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/new_category_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/radius_border"
        android:layout_margin="5dp"

        android:gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_green"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/add"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>